# freemux

./: .gitignore  AGENTS.md  LICENSE  Makefile  PLAN.md  README.md  package-lock.json  package.json  run-freemux.sh  vite.config.ts
.github/: CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: bootstrap-debian.sh  dev-check.sh  ffmpeg-check.sh
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  ffmpeg.rs  lib.rs  main.rs  models.rs  profiles.rs
src/components/: AppHeader.vue  CommandPreview.vue  ConversionOptionsPanel.vue  ConversionProgressPanel.vue  OutputPanel.vue  ProfilesPanel.vue  SourceFileList.vue  SourceInspector.vue  ToolStatusBanner.vue  VideoPreview.vue
src/domain/: conversion.ts  media.ts
src/services/: desktopClient.ts
src/stores/: useConverterStore.ts
src/tests/: ConversionOptionsPanel.spec.ts  ConversionProgressPanel.spec.ts  converterStore.spec.ts  ffmpegArgs.spec.ts  pathing.spec.ts
src/utils/: ffmpegArgs.ts  formatters.ts  pathing.ts
