[package]
name = "freemux"
version = "0.1.0"
description = "FreeMux desktop media converter"
authors = ["Terje"]
edition = "2021"

[lib]
name = "freemux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.0.0", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "=2.0.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "=2.0.0"
tauri-plugin-opener = "=2.0.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
